[gd_scene load_steps=5 format=3 uid="uid://3igecwdmttmy"]

[ext_resource type="Theme" uid="uid://d0pm7w4ss66jb" path="res://src/theme/game_theme.tres" id="1_61hbs"]
[ext_resource type="Script" path="res://src/ui/menu/pause_menu.gd" id="2_75ejg"]
[ext_resource type="PackedScene" uid="uid://bk6oct4fhskab" path="res://src/ui/menu/options_menu.tscn" id="3_a23vc"]
[ext_resource type="PackedScene" uid="uid://bfs0ys7sd18ud" path="res://src/ui/menu/cheats_menu.tscn" id="4_h0e1x"]

[node name="PauseMenu" type="Control"]
process_mode = 2
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_61hbs")
script = ExtResource("2_75ejg")

[node name="Controls" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -20.0
offset_right = 40.0
offset_bottom = 20.0
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Controls"]
layout_mode = 2

[node name="Label" type="Label" parent="Controls/VBoxContainer"]
layout_mode = 2
text = "KEYBINDINGS"
horizontal_alignment = 1

[node name="KeyBindings" type="GridContainer" parent="Controls/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
columns = 2

[node name="Menu" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.5
offset_top = -97.5
offset_right = 100.5
offset_bottom = 97.5
grow_horizontal = 2
grow_vertical = 2

[node name="UpperMenuPart" type="PanelContainer" parent="Menu"]
layout_mode = 2

[node name="GamePausedContainer" type="VBoxContainer" parent="Menu/UpperMenuPart"]
layout_mode = 2

[node name="Title" type="Label" parent="Menu/UpperMenuPart/GamePausedContainer"]
layout_mode = 2
text = "GAME PAUSED"
horizontal_alignment = 1

[node name="ResumeButton" type="Button" parent="Menu/UpperMenuPart/GamePausedContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Resume"

[node name="MainMenuButton" type="Button" parent="Menu/UpperMenuPart/GamePausedContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 4
text = "Main Menu"

[node name="HBoxContainer" type="HBoxContainer" parent="Menu"]
layout_mode = 2

[node name="Options" parent="Menu/HBoxContainer" instance=ExtResource("3_a23vc")]
unique_name_in_owner = true
layout_mode = 2

[node name="Cheats" parent="Menu/HBoxContainer" instance=ExtResource("4_h0e1x")]
unique_name_in_owner = true
layout_mode = 2

[connection signal="pressed" from="Menu/UpperMenuPart/GamePausedContainer/ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="Menu/UpperMenuPart/GamePausedContainer/MainMenuButton" to="." method="_on_main_menu_button_pressed"]
